docs/config_examples/ingress/networkingV1/example-default-ingress-class.yaml
# Create the IngressClass resource
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  # Provide the IngressClassName as "f5"
  name: f5
  annotations:
    # Set the annotation as true to make CIS default ingress controller of k8s cluster
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  # Provide the controller name as "f5.com/cntr-ingress-svcs"
  # Warning: don't change the controller name as cis verify the controller name while processing the ingress resource
  controller: f5.com/cntr-ingress-svcs
