docs/config_examples/ingress/networkingV1/example-ingress-class-name.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  # Load balancing algorithm
  virtual-server.f5.com/balance: "round-robin"
  # Specify the port you want to handle requests
  virtual-server.f5.com/http-port: "80"
  name: k8s10
  namespace: default
spec:
  defaultBackend:
    service:
      name: svc
      port:
        number: 80
  # Provide the IngressClassName as "f5"
  ingressClassName: f5
