docs/config_examples/ingress/networkingV1/ingress-https-monitor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/allow-http: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
    virtual-server.f5.com/balance: least-connections-node
    virtual-server.f5.com/clientssl: '[{"bigIpProfile": "/Common/pytest-foo-clientssl"}]'
    virtual-server.f5.com/health: '[{"path": "/",
                                    "send": "HTTP GET /",
                                    "type": "https",
                                    "interval": 4,
                                    "timeout": 5 }]'
    virtual-server.f5.com/http-port: "80"
    virtual-server.f5.com/https-port: "443"
    virtual-server.f5.com/ip: 10.8.3.123
    virtual-server.f5.com/partition: test
    virtual-server.f5.com/serverssl: /Common/pytest-foo-serverssl
  name: svc-1
  namespace: default
spec:
  defaultBackend:
    service:
      name: svc-1
      port:
        number: 443
  ingressClassName: f5
