docs/config_examples/ingress/networkingV1/ingress-with-health-monitors-sslprofile.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/allow-http: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
    virtual-server.f5.com/clientssl: '[{"bigIpProfile": "/Common/clientssl"}]'
    # Health monitor with sslProfile
    virtual-server.f5.com/health: |
      [
        {
          "path": "/",
          "send": "GET / HTTP/1.0\r\n\r\n",
          "recv": "Hello from",
          "interval": 2,
          "type": "https",
          "sslProfile": "/Common/serverssl",
          "timeout": 5
        }
      ]
    virtual-server.f5.com/ip: 1.2.3.4
    virtual-server.f5.com/serverssl: /Common/serverssl
  name: ing2
  namespace: default
spec:
  defaultBackend:
    service:
      name: svc-1
      port:
        number: 443
