docs/config_examples/ingress/networkingV1/ingress-with-health-monitors.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing1
  namespace: default
  annotations:
    # BIG-IP Virtual Server IP address
    virtual-server.f5.com/ip: "1.2.3.4"
    # BIG-IP partition
    virtual-server.f5.com/partition: "k8s"
    # BIG-IP Health Monitor
    virtual-server.f5.com/health: |
      [
        {
          "path":     "svc1.example.com/app1",
          "send":     "HTTP GET /health/app1",
          "interval": 5,
          "timeout":  10
        }, {
          "path":     "svc2.example.com/app2",
          "send":     "HTTP GET /health/app2",
          "interval": 5,
          "timeout":  5
        }
      ]
spec:
  rules:
  - host: svc1.example.com
    http:
      paths:
      - backend:
          service:
            name: svc1
            port:
              number: 8080
        path: /app1
        pathType: ImplementationSpecific
  - host: svc2.example.com
    http:
      paths:
      - backend:
          service:
            name: svc2
            port:
              number: 9090
        path: /app2
        pathType: ImplementationSpecific
