docs/config_examples/ingress/networkingV1/ingress-with-translate-address.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    virtual-server.f5.com/http-port: "80"
    virtual-server.f5.com/ip: 1.0.0.1
    virtual-server.f5.com/translate-server-address: "false"
  name: k8s18b
  namespace: default
spec:
  ingressClassName: f5
  rules:
    - host: pytest-svc2.com
      http:
        paths:
          - backend:
              service:
                name: svc2
                port:
                  number: 8081
            path: /
            pathType: ImplementationSpecific
