docs/config_examples/ingress/networkingV1/name-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ing-virtual-hosting
 namespace: default
 annotations:
  # Provide an IP address for the BIG-IP Virtual Server.
  virtual-server.f5.com/ip: "1.2.3.4"
  # BIG-IP partition
  virtual-server.f5.com/partition: "k8s"
  # Load balancing algorithm
  virtual-server.f5.com/balance: "round-robin"
  # Specify the port you want to handle requests
  virtual-server.f5.com/http-port: "80"
spec:
 rules:
 # URL
 - host: mysite.example.com
   http:
     # path to Service from URL
     paths:
       - path: /myApp1
         pathType: ImplementationSpecific
         backend:
           service:
             name: myService1
             port:
               number: 80
 # URL
 - host: yoursite.example.com
   http:
     # path to Service from URL
     paths:
       - path: /myApp2
         pathType: ImplementationSpecific
         backend:
           service:
             name: myService2
             port:
               number: 80
