docs/config_examples/ingress/networkingV1/sample-headless-service-ingress.yaml
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    headless-app: app-1
  name: svc-1
subsets:
  - addresses:
      - ip: 192.168.0.101
        nodeName: node-1
      - ip: 192.168.0.102
        nodeName: node-2
      - ip: 192.168.0.103
        nodeName: node-3
    ports:
      - name: port-app-1
        port: 8080
        protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: svc-1
  labels:
    headless-app: app-1
spec:
  clusterIP: None
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: port-app-1
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svc-1-ingress
  annotations:
    # Ingress class annotation
    kubernetes.io/ingress.class: f5
    # Load balancing algorithm
    virtual-server.f5.com/balance: least-connections-node
    # Provide an IP address for the BIG-IP Virtual Server.
    virtual-server.f5.com/ip: 10.8.10.3
    # Specify the BIG-IP partition containing the virtual server.
    virtual-server.f5.com/partition: test
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-1
                port:
                  number: 8080
