docs/config_examples/ingress/networkingV1/simple-ingress-fanout.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-fanout
  namespace: default
  annotations:
    # Provide an IP address for the BIG-IP Virtual Server.
    virtual-server.f5.com/ip: "1.2.3.4"
    # Specify the BIG-IP partition containing the virtual server.
    virtual-server.f5.com/partition: "k8s"
    # Load balancing algorithm
    virtual-server.f5.com/balance: "round-robin"
spec:
  rules:
  - host: mysite.example.com
    http:
      paths:
      - path: /mysite/app1
        pathType: ImplementationSpecific
        backend:
          service:
            name: svc-1
            port:
              number: 80
      - path: /mysite/app2
        pathType: ImplementationSpecific
        backend:
          service:
            name: svc-2
            port:
              number: 80
