docs/config_examples/ingress/networkingV1/single-service-namedport-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  namespace: default
  annotations:
    # Provide an IP address for the BIG-IP Virtual Server.
    virtual-server.f5.com/ip: "10.190.25.70"
    # Specify the BIG-IP partition containing the virtual server
    virtual-server.f5.com/partition: "test"
spec:
  # Provide the IngressClassName as "f5"
  ingressClassName: f5
  defaultBackend:
    # The name of the Kubernetes Service you want to expose to external traffic
    service:
      name: svc-1
      # Below service.port can also be referenced using service port number as in service definition
      port:
        name: svc1-port
