docs/config_examples/ingress/networkingV1/single-service-tls-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # IP address of a BIG-IP pool member
    virtual-server.f5.com/ip: "1.2.3.4"
  name: tls-example-ingress
spec:
  tls:
  - hosts:
    - mysite.foo.com
    #Referencing this secret in an Ingress tells the Ingress controller to 
    #secure the channel from the client to the load balancer using TLS
    secretName: ingress-example-secret-tls
  rules:
    - host: mysite.foo.com
      http:
      # path to Service from URL
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: service1
              port:
                number: 80
