docs/config_examples/ingress/networkingV1/single-service-tls-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingressTLS
  namespace: default
  annotations:
    # Provide an IP address for the BIG-IP Virtual Server.
    virtual-server.f5.com/ip: "1.2.3.4"
    # Specify the BIG-IP partition containing the virtual server.
    virtual-server.f5.com/partition: "k8s"
    # Allow/deny TLS connections
    ingress.kubernetes.io/ssl-redirect: "true"
    # Allow/deny HTTP connections
    ingress.kubernetes.io/allow-http: "false"
spec:
  tls:
    # Specifies an already-configured SSL Profile on BIG-IP that should be
    # used for this Ingress.
    # Follows the format "/partition/profile_name".
    - secretName: /Common/clientssl
  backend:
    # The name of a single Kubernetes Service you want to expose to external
    # traffic using TLS
    serviceName: myService
    servicePort: 443
